--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
   />
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link
     href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
     rel="stylesheet"
@@ -89,4 +89,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
