--- a/galeria.html
+++ b/galeria.html
@@ -1,30 +1,7 @@
-<div class="row">
-  <div class="col-md-4 mb-4">
-    <div class="card shadow-sm h-100" style="cursor: pointer;" onclick="abrirProjeto(0)">
-      <img src="img/projeto1.jpg" class="card-img-top" alt="Projeto Website">
-      <div class="card-body">
-        <h5 class="card-title">Projeto Website</h5>
-      </div>
-    </div>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 55vh;">
+  <div class="row g-3 justify-content-center" id="projetos-container">
+    <!-- Cards serão inseridos aqui dinamicamente -->
+     
   </div>
 
-  <div class="col-md-4 mb-4">
-    <div class="card shadow-sm h-100" style="cursor: pointer;" onclick="abrirProjeto(1)">
-      <img src="img/projeto2.jpg" class="card-img-top" alt="Aplicação Móvel">
-      <div class="card-body">
-        <h5 class="card-title">Aplicação Móvel</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-4 mb-4">
-    <div class="card shadow-sm h-100" style="cursor: pointer;" onclick="abrirProjeto(2)">
-      <img src="img/projeto3.jpg" class="card-img-top" alt="Loja Online">
-      <div class="card-body">
-        <h5 class="card-title">Loja Online</h5>
-      </div>
-    </div>
-  </div>
 </div>
-
-
