--- a/home.html
+++ b/home.html
@@ -1,8 +1,18 @@
-<h1>Bem-vindo MASTERD</h1>
-<p>
-  Criamos websites modernos e adaptados ao seu negócio, desde páginas institucionais a lojas online.
-</p>
-<p>
-  Usamos tecnologias atuais como HTML5, CSS3 e JavaScript para garantir um site rápido e responsivo.
-</p>
-<img src="https://blog.hubspot.com/hs-fs/hubfs/web-development.webp?width=595&height=400&name=web-development.webp" alt="Desenvolvimento de websites" style="max-width: 100%; height: auto; border-radius: 8px; margin-top: 20px;">
+<div class="row mb-3 mt-3">
+
+  <div class="col-lg-9 mb-4 text-center">
+    <h1>Bem-vindo</h1>
+    <p>
+      Criamos websites modernos e adaptados ao seu negócio, desde páginas institucionais a lojas online. <br>
+      Usamos tecnologias atuais como HTML5, CSS3 e JavaScript para garantir um site rápido e responsivo.
+    </p>
+    <img src="https://blog.hubspot.com/hs-fs/hubfs/web-development.webp?width=595&height=400&name=web-development.webp"
+         alt="Desenvolvimento de websites"
+         style="max-width: 100%; height: auto; border-radius: 8px; margin-top: 20px;">
+  </div>
+
+  <div class="col-lg-3 mt-3" id="noticias" >
+    <h5 class="text-center">Notícias MASTERD</h5><br>
+    <div id="noticias-rtp"></div>
+  </div>
+</div>
