--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
   <meta charset="UTF-8" />
-  <title>Website AJAX Dinâmico</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>MasterD</title>
 
 
   <link
@@ -11,16 +15,16 @@
   />
 
   <link rel="stylesheet" href="css/style.css" />
-  <link
-    href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
-    rel="stylesheet"
-  />
+  <link rel="stylesheet" href="css/login.css" />
+
+
 
   <link
     rel="icon"
     type="image/x-icon"
     href="https://campus.masterd.pt/campusvirtual/assets/images/favicon.png"
   />
+  
 
   <link
   rel="stylesheet"
@@ -39,21 +43,22 @@
   <script src="./js/script.js"
   ></script>
 
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+
+
 </head>
 
+
+
 <body>
+
+
   <div id="navbar-container"></div>
 
-  <div class="row mt-3">
-    <div class="col-sm-9 mb-3" id="content-container">
-      <div id="content"></div>
-    </div>
 
-    <div class="col-sm-3">
-      <h5 class="text-center">Notícias RTP</h5>
-      <div id="noticias-rtp" class="list-group"></div>
-    </div>
-  </div>
+  <div id="content"></div>
+
+
 
 
   <div
@@ -67,7 +72,6 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title w-100 text-center" id="modalProjetoLabel">
-            Título do Projeto
           </h5>
           <button
             type="button"
@@ -88,10 +92,6 @@
           <p>
             <strong>Tecnologias:</strong>
             <span id="tecnologiasProjeto"></span>
-          </p>
-          <p>
-            <strong>Ano:</strong>
-            <span id="dataProjeto"></span>
           </p>
         </div>
       </div>
